--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,10 @@
-.App-header {
+.app-header {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   padding: 16px 32px;
   gap: 10px;
-  position: absolute;
   width: 1296px;
   height: 82.39px;
   left: 108px;
@@ -17,9 +14,33 @@
   border-radius: 20px;
 }
 
+.app-header nav {
+  background-color: #282c34;
+  box-shadow: 0px 2px 6px rgba(13, 26, 38, 0.15);
+  border-radius: 20px;
+}
+
+.app-header ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+}
+
   .app-header li {
+    margin-right: 10px;
     display: inline;
   }
+
+.app-header a {
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+}
+
+.app-header a:hover {
+  color: #61dafb;
+}
 
 /* Frame 5 */
 .app-header  .frame-5 {
