--- a/src/components/AdminDashboard/AdminDashboard.css
+++ b/src/components/AdminDashboard/AdminDashboard.css
@@ -1,12 +1,10 @@
-/*Import voor het font*/
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
-
-/* Stijl voor de lijst rechts, moet nog een grijze achtergrond krijgen maar daar was ik nog niet aan toegekomen*/
 .manage-list {
   position: relative;
-  left: 50px;
-  top: 5px;
+  left: 15px;
+  top: 10px;
+  padding-bottom: 20px;
   color: #000;
   font-family: "Quicksand";
   font-size: 9px;
@@ -17,14 +15,14 @@
   display: flex;
   width: 290px;
   flex-direction: column;
-  background-color: #ffffff;
   flex-shrink: 0;
 }
 
  .item-preview {
   padding: 8px;
-  margin: 4px 0; 
+  margin: 4px 0;
   border-radius: 15px;
+   background-color: #FFFFFF;
   box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.25);
 }
 
@@ -32,6 +30,7 @@
   transition: transform 0.2s ease;
   transform: scale(0.95);
 }
+
 .list-button {
   line-height: normal;
   letter-spacing: 1.5px;
@@ -41,14 +40,14 @@
   flex-direction: column;
   background-color: #ffffff;
 }
-
-/* bgein voor de stijl voor de navbar*/
 .navbar {
-  padding: 25px 25px 25px 50px;
+  padding: 25px;
   display: flex;
   align-items: center;
 }
-
+.navbar .img{
+  position: relative;
+}
 .navbar .nav {
   margin-left: auto;
   font-family: "Quicksand";
@@ -64,4 +63,28 @@
   border-radius: 15px;
   padding-top: 5px;
   box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.25);
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 18% 82%;
+  grid-template-areas:
+    'header header header header header header header header header header header header header header header header header header'
+    'menu main main main main main main main main main main main main main main main main main';
+}
+
+.header { grid-area: header; }
+.menu {
+  grid-area: menu;
+  border-radius: 15px;
+  background: #F4F4F4;
+  margin-left: 25px;
+}
+.main {
+  padding: 25px;
+  grid-area: main;
+  border-radius: 15px;
+  background: #F4F4F4;
+  margin-left: 15px;
+  margin-right: 25px;
 }
