--- a/src/components/AdminDashboard/AdminDashboard.css
+++ b/src/components/AdminDashboard/AdminDashboard.css
@@ -13,7 +13,7 @@
   letter-spacing: 1.5px;
   text-transform: uppercase;
   display: flex;
-  width: 290px;
+  width: 90%;
   flex-direction: column;
   flex-shrink: 0;
 }
@@ -36,7 +36,7 @@
   letter-spacing: 1.5px;
   text-transform: uppercase;
   display: flex;
-  width: 290px;
+  width: 100%;
   flex-direction: column;
   background-color: #ffffff;
 }
@@ -67,7 +67,7 @@
 
 .grid-container {
   display: grid;
-  grid-template-columns: 18% 82%;
+  grid-template-columns: 20% 80%;
   grid-template-areas:
     'header header header header header header header header header header header header header header header header header header'
     'menu main main main main main main main main main main main main main main main main main';
