--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,9 @@
   padding: 16px 32px;
   justify-content: space-between;
   align-items: center;
-
   /*style*/
   border-radius: 20px;
   background: var(--colors-background-primary, #FFF);
-
   /* shadows/medium */
   box-shadow: 0px 2px 6px 0px rgba(13, 26, 38, 0.15);
 
@@ -173,7 +171,7 @@
 .footer {
   /*layout*/
   display: flex;
-  width: 1512px;
+  width: 100%;
   height: 384px;
   padding: 40px 72px;
   flex-direction: column;
@@ -362,29 +360,147 @@ li a {
 .sidebar-link:hover {
 }
 
-.guestdashboard{
+.guestdashboard {
+  padding-left: 60px; /* Adjust the value as needed */
+}
+
+
+.toptext{
+  display: flex;
+  text-indent: 16px;
+}
+.toptext h3{
+  padding-top: 20px;
+}
+
+.selects {
+  width: 100%;
   display: flex;
 }
 
-.bookoverview{
-  width: 380px;
-  height: 300px;
-  flex-shrink: 0;
-  border-width: 40%;
+.selects p {
   border-radius: 15px;
-  border: 0.5px solid #0D9813;
-  padding: 20px;
-}
-
-.pricedetails{
-  width: 380px;
-  height: 300px;
-  flex-shrink: 0;
-  border-width: 40%;
-  border-radius: 15px;
-  border: 0.5px solid #0D9813;
-  padding: 20px;
+  border-width: 1px;
+  background: #D9D9D9;
+  padding: 8px 12px;
+  margin-left: 7px;
 }
 
 
+.selects p:hover {
+  border: 1px solid #0D9813;
+  cursor: pointer;
+}
 
+.midtext{
+  width: 100%;
+  display: flex;
+}
+
+.bookoverview {
+  position: relative;
+  width: 420px;
+  height: 300px;
+  border-radius: 15px;
+  border: 0.5px solid #0D9813;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 10px;
+  display: flex; 
+  flex-direction: column; 
+}
+
+.bookoverviewbold {
+  display: flex;
+  font-weight: bold;
+  gap: 100px;
+}
+
+.pricedetails {
+  position: relative;
+  width: 420px;
+  height: 300px;
+  border-radius: 15px;
+  border: 0.5px solid #0D9813;
+  border-width: 40%;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 10px;
+  display: flex; 
+  flex-direction: column; 
+}
+
+.pricedetailsbold {
+  display: flex;
+  font-weight: bold;
+  gap: 230px;
+}
+
+.moreinfo{
+  color: #0A760F;
+  cursor: pointer;
+  margin-top: -15px;
+  float: right;
+}
+
+.moreinfo p:hover{
+  text-decoration: underline;
+}
+
+#details{
+  float: right;
+  margin-top: -22px;
+}
+
+.line{
+  width: 100%;
+  border-bottom: 1px solid black;
+  margin-top: 5px;
+}
+
+.hostinfo {
+  position: relative;
+  width: 500px;
+  height: 300px;
+  border-radius: 15px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-right: 10px;
+  margin-top: -12px;
+}
+
+.hostinfo h3{  
+  display: flex;
+  gap: 120px;
+}
+
+.hostinfo h4 {
+  color: #0A760F;
+  margin-top: 1px;
+}
+
+.hostinfo h4:hover{
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+#accoimg{
+  width: 470px;
+  height: 250px;
+  border-radius: 15px; 
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.25);
+  position: relative;
+  margin-top: -22px;
+}
+
+.bottomtext{
+  color: #0A760F;
+  width: 1200px;
+  display: flex;
+  gap: 80px;
+}
+
+.bottomtext h3:hover{
+  text-decoration: underline;
+  cursor: pointer;
+}
