--- a/src/App.css
+++ b/src/App.css
@@ -46,9 +46,13 @@
   margin: 0 auto; /* Center the search bar */
 
   border-radius: 20px; /* Increase border-radius for a more rounded search bar */
-  border: 1px solid #000;
   background: #FFF;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.search-bar input {
+  border: none; /* Remove borders from the input element */
+  outline: none; /* Remove the default focus outline */
 }
 
 .search-icon {
