--- a/src/App.css
+++ b/src/App.css
@@ -576,7 +576,6 @@ margin: 20px;
 }
 
 .sideimgbot img{
-  float: ;
   width: 200px;
   height: 165px;
   flex-shrink: 0;
@@ -738,4 +737,97 @@ margin: 20px;
   padding-left: 20px;
   padding-right: 20px;
   margin: 10px;
+}
+
+.aboutus{
+  padding-left: 108px;
+  padding-right: 100px;
+  color: #000;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+}
+
+.bigtext{
+  margin-top: 77px;
+  margin-bottom: 70px;
+  width: 693px;
+  height: 108px;
+}
+
+.aboutusimg img{
+  float: right;
+  margin-bottom: 150px;
+  margin-left: 100px;
+  margin-right: 100px;
+}
+
+.underbigtext{
+  width: 760px;
+  height: 300px;
+  color: #000;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 150%; 
+}
+
+.textbubbles{
+  width: 750px;
+}
+
+.textbubbles h1{
+  color: #0D9813;
+  text-align: center;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%;
+}
+
+.bubble1{
+  border: #000 3px solid;
+  border-radius: 150px;
+  margin: 30px;
+}
+
+.bubble2{
+  border: #000 3px solid;
+  border-radius: 150px;
+  margin: 30px;
+}
+
+.bubble3{
+  border: #000 3px solid;
+  border-radius: 150px;
+  margin: 30px;
+}
+
+.bubble4{
+  border: #000 3px solid;
+  border-radius: 150px;
+  margin: 30px;
+}
+
+.bubble5{
+  border: #000 3px solid;
+  border-radius: 50%;
+  margin: 30px;
+}
+
+.contact{
+  padding: 50px;
+  margin-left: 100px;
+  color: #000;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+}
+
+.contactform input{
+  border-radius: 15px;
+  border: 1px solid #000;
+  background: #FFF;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
