--- a/src/App.css
+++ b/src/App.css
@@ -775,7 +775,7 @@ margin: 20px;
 
 .awesomefacts{
   margin-top: 200px;
-  margin-left: 450px;
+  margin-left: 550px;
   width: 100%;
 }
 
@@ -840,14 +840,21 @@ margin: 20px;
   color: #000;
   font-size: 20px;
   font-style: normal;
+  font-family: sans-serif, 'Gill Sans';
   font-weight: 400;
   line-height: 150%;
 }
 
 .contactform{
   border-radius: 15px;
-  background: #EBFAED;
-  padding: 50px;
+  background: #c3e3c7;
+  padding-top: 50px;
+  padding-left: 50px;
+  padding-bottom: 50px;
+}
+
+.contactform h2{
+  font-weight: 600;
 }
 
 .namemessage{
@@ -860,10 +867,12 @@ margin: 20px;
 }
 
 .biginput input{
-  margin-top: -50px;
-  width: 905px;
-  height: 312px;
+  display: block;
   float: right; 
+  margin-top: -50px;
+  margin-right: 100px;
+  width: 100%;
+  height: 312px;
   flex-shrink: 0;
 }
 
