Ook alvast mappen gemaakt voor de lege paginas

--- a/src/App.css
+++ b/src/App.css
@@ -1,286 +1,3 @@
-/*css for the header*/
-.app-header {
-  /*layout*/
-  display: flex;
-  width: 100%;
-  padding: 16px 32px;
-  justify-content: space-between;
-  align-items: center;
-  /*style*/
-  border-radius: 20px;
-  background: var(--colors-background-primary, #FFF);
-  /* shadows/medium */
-  box-shadow: 0px 2px 6px 0px rgba(13, 26, 38, 0.15);
-
-}
-
-.app-header nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center; /* Add this line to vertically center items */
-}
-
-.app-header ul {
-  list-style: none;
-  text-decoration: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 50px;
-}
-
-  .app-header li {
-    text-decoration: none;
-    color: var(--colors-font-primary, #0D1A26);
-    font-family: Inter;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 150%; /* 24px */
-  }
-
-.app-header a {
-  text-decoration: none;
-}
-
-.app-header a:hover {
-  text-decoration: none;
-  color: #61dafb;
-}
-
-.app-header li button {
-  /*layout*/
-  display: flex;
-  padding: 8px 16px;
-  justify-content: center;
-  align-items: center;
-
-  /*style*/
-  color:#FFFFFF;/*the color of the text was manually added*/
-  border-radius: 4px;
-  border: 1px solid var(--components-button-primary-border-color, rgba(0, 0, 0, 0.00));
-  background: #0D9813;
-}
-
-.login-container {
-  margin-left: auto;
-  display: flex; /* Ensure the container is also a flex container */
-  align-items: center; /* Center the button vertically within the container */
-}
-
-
-/* Frame 5 */
-.app-header  .frame-5 {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  padding: 0px;
-  gap: 50px;
-  margin: 0 auto;
-  width: 565px;
-  height: 50.39px;
-}
-
-/* Group 12 */
-.app-header  .frame-5 .group-12 {
-  width: 50px;
-  height: 50.39px;
-}
-
-/* Random Symboles 4 */
-.app-header  .frame-5 .group-12 .random-symbols-4 {
-  position: absolute;
-  left: 0%;
-  right: 91.15%;
-  top: 0%;
-  bottom: 0%;
-  /* Add specific styles for Random Symboles 4 */
-}
-
-/* Clip path group */
-.app-header  .frame-5 .group-12 .clip-path-group {
-  position: absolute;
-  left: 0%;
-  right: 91.15%;
-  top: 0%;
-  bottom: 0%;
-  /* Add specific styles for Clip path group */
-}
-
-/* ... Repeat the above structure for other elements */
-
-/* actions */
-.app-header  .actions {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  padding: 0px;
-  gap: 10px;
-  margin: 0 auto;
-  width: 116px;
-  height: 40px;
-  border-radius: 4px;
-}
-
-/* Button */
-.app-header  .actions .button {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  padding: 8px 16px;
-  width: 116px;
-  height: 40px;
-  background: #0D9813;
-  border-radius: 4px;
-}
-
-/* label */
-.app-header  .actions .button .label {
-  width: 84px;
-  height: 24px;
-  font-family: 'Inter'; /* ??? */
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 150%;
-  color: #FFFFFF;
-}
-/*end of the css header*/
-
-.close-button {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  background: none;
-  border: none;
-  cursor: pointer;
-  font-size: 30px;
-  color: #ff6f61;
-  transition: transform 0.3s, color 0.3s;
-}
-
-.close-button:hover {
-  transform: rotate(180deg);
-  color: #ff3d3d;
-}
-
-/* Footer styles */
-.footer {
-  /*layout*/
-  display: flex;
-  width: 100%;
-  height: 384px;
-  padding: 40px 72px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 32px;
-  flex-shrink: 0;
-
-  /*style*/
-  background: var(--colors-brand-primary-10, #86CB89);
-}
-
-.newsletter-section {
-  margin-bottom: 20px;
-  display: flex;
-  flex-direction: column;
-}
-
-.newsletter-section p {
-  margin-bottom: 10px;
-  color: var(--colors-font-secondary, #304050);
-  font-family: Inter;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 150%; /* 30px */
-}
-
-.newsletter-subsection p {
-  color: var(--colors-font-secondary, #304050);
-  font-family: Inter;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 150%; /* 24px */
-}
-.newsletter-form {
-  display: flex;
-  gap: 10px;
-
-
-}
-
-.newsletter-form input {
-  display: flex;
-  width: 300px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 8px;
-}
-
-.newsletter-form button {
-  /*layout*/
-  display: flex;
-  padding: 8px 50px;
-  justify-content: center;
-  align-items: center;
-/*style*/
-  border-radius: 4px;
-  border: 1px solid var(--components-button-primary-border-color, rgba(0, 0, 0, 0.00));
-  background: var(--components-button-primary-background-color, #0A760F);
-  color: var(--components-button-primary-color, #FFF);
-  /* text*/
-  font-family: Inter;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 150%; /* 24px */
-}
-
-.footer-links-section {
-  display: flex;
-  justify-content: space-around;
-}
-
-.footer-column {
-  flex: 1;
-  margin-right: 20px;
-}
-
-.footer-column h3 {
-  color: var(--colors-font-secondary, #304050);
-  font-family: Inter;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 24px; /* 150% */
-  letter-spacing: 0.16px;
-}
-
-.footer-column ul {
-  list-style: none;
-  padding: 0;
-}
-
-.footer-column ul li {
-  margin: 10px 0;
-
-  color: var(--colors-font-interactive, #0A760F);
-  font-family: Inter;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24px; /* 150% */
-  letter-spacing: 0.16px;
-}
-
-/*end of footer*/
 
 /*beginning of the accomodation styling*/
 /*hostdashbord*/
@@ -291,12 +8,12 @@
 
 .accommodation-row {
   display: flex;
-  align-items: center; /* Align items vertically in the center */
-  margin: 0.5em 0; /* Adjust the margin between rows */
+  align-items: center;
+  margin: 0.5em 0;
 }
 
 .image-container {
-  margin-right: 12em; /* Add spacing between image and descriptions */
+  margin-right: 12em;
 }
 
 .descriptions-container {
@@ -308,7 +25,6 @@
   margin-right: 3em;
 }
 
-/*sidebar*/
 .sidebar {
   width: 200px;
   height: 100%;
@@ -358,383 +74,5 @@ li a {
 }
 
 .sidebar-link:hover {
-}
 
-/*Alles voor het guestdashboard*/
-.guestdashboard {
-  padding-left: 60px; /* Adjust the value as needed */
-}
-
-
-.toptext{
-  display: flex;
-  text-indent: 16px;
-}
-.toptext h3{
-  padding-top: 20px;
-}
-
-.selects {
-  width: 100%;
-  display: flex;
-}
-
-.selects p {
-  border-radius: 15px;
-  border-width: 1px;
-  background: #D9D9D9;
-  padding: 8px 12px;
-  margin-left: 7px;
-}
-
-
-.selects p:hover {
-  border: 1px solid #0D9813;
-  cursor: pointer;
-}
-
-.midtext{
-  width: 100%;
-  display: flex;
-}
-
-.bookoverview {
-  position: relative;
-  width: 420px;
-  height: 300px;
-  border-radius: 15px;
-  border: 0.5px solid #0D9813;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin: 10px;
-  display: flex; 
-  flex-direction: column; 
-}
-
-.bookoverviewbold {
-  display: flex;
-  font-weight: bold;
-  gap: 100px;
-}
-
-.pricedetails {
-  position: relative;
-  width: 420px;
-  height: 300px;
-  border-radius: 15px;
-  border: 0.5px solid #0D9813;
-  border-width: 40%;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin: 10px;
-  display: flex; 
-  flex-direction: column; 
-}
-
-.pricedetailsbold {
-  display: flex;
-  font-weight: bold;
-  gap: 230px;
-}
-
-.moreinfo{
-  color: #0A760F;
-  margin-top: -15px;
-  float: right;
-}
-
-.moreinfo p:hover{
-  cursor: pointer;
-  text-decoration: underline;
-}
-
-#details{
-  float: right;
-  margin-top: -22px;
-}
-
-.line{
-  width: 100%;
-  border-bottom: 1px solid black;
-  margin-top: 5px;
-}
-
-.hostinfo {
-  position: relative;
-  width: 500px;
-  height: 300px;
-  border-radius: 15px;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin-right: 10px;
-  margin-top: -12px;
-}
-
-.hostinfo h3{  
-  display: flex;
-  gap: 120px;
-}
-
-.hostinfo h4 {
-  color: #0A760F;
-  margin-top: 1px;
-}
-
-.hostinfo h4:hover{
-  cursor: pointer;
-  text-decoration: underline;
-}
-
-#accoimg{
-  width: 470px;
-  height: 250px;
-  border-radius: 15px; 
-  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.25);
-  position: relative;
-  margin-top: -22px;
-}
-
-.bottomtext{
-  color: #0A760F;
-  width: 1200px;
-  display: flex;
-  gap: 80px;
-  margin-bottom: 100px;
-}
-
-.bottomtext h3:hover{
-  text-decoration: underline;
-  cursor: pointer;
-}
-
-/*Alles voor de detailpage*/
-.detailpage{
-padding-left: 60px;
-}
-
-.topdetails{
-  display: flex;
-  padding-top: 20px;
-  padding-left: 20px;
-  align-items: center;
-  gap: 100px;
-}
-
-.topdetails button{
-  width: 40px;
-  height: 40px;
-  border: #FFF;
-  border-radius: 100px;
-  background-color: #129518;
-}
-
-.topdetails button:hover{
-  cursor: pointer;
-}
-
-.topdetails ul{
-  display: flex;
-  gap: 15px;
-  display: inline-flex;
-  padding: 5px 15px;
-  justify-content: center;
-  align-items: center;
-}
-
-.topdetails li{
-  border-radius: 20px;
-  border: 0.5px solid #0D9813;
-  background: #FFF;
-  padding: 5px;
-}
-
-#boxheader{
-  display: flex;
-}
-
-.imagesacco{
-  display: flex;
-  padding-left: 25px;
-  padding-right: 20px;  
-}
-
-.imagesacco img{
-  border-radius: 15px;
-}
-
-.bigimg img{
-width: 651px;
-height: 345px;
-flex-shrink: 0;
-margin: 20px;
-}
-
-.sideimgtop img{
-  width: 200px;
-  height: 165px;
-  flex-shrink: 0;
-}
-
-.sideimgbot img{
-  width: 200px;
-  height: 165px;
-  flex-shrink: 0;
-}
-
-.accodetails{
-  width: 90%;
-  align-items: center;
-  justify-content: center;
-  border-radius: 15px;
-  border-width: 40%;
-  padding-left: 25px;
-  padding-right: 20px;
-  margin: 10px;
-}
-
-.accodetails h2{
-  padding-left: 20px;
-}
-
-#ondertitel{
-  padding-left: 20px;
-}
-
-
-.accodetails img{
-  width: 190px;
-  height: 200px;
-  border-radius: 15px;
-}
-
-.accodetails h4{
-  font-size: 16px;
-  font-style: normal;
-  font-weight: bold;
-  color: #0A760F;
-  width: 100%;
-  padding-left: 550px;
-  
-}
-
-.accodetails h4:hover{
-  text-decoration: underline;
-  cursor: pointer;
-}
-
-
-.box1details{
-  width: 60%;
-  align-items: center;
-  border-radius: 15px;
-  border: 1px solid #0D9813;
-  border-width: 40%;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin: 10px;  
-}
-
-.box2details{
-  width: 60%;
-  align-items: center;
-  border-radius: 15px;
-  border: 1px solid #0D9813;
-  border-width: 40%;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin: 10px;
-}
-
-.events{
-  width: 100%;
-  align-items: center;
-  justify-content: center;
-  border-radius: 15px;
-  border-width: 40%;
-  padding-left: 25px;
-  padding-right: 20px;
-  margin: 10px;
-}
-
-.events h2{
-  padding-left: 20px;
-}
-
-.events img{
-  width: 190px;
-  height: 200px;
-  border-radius: 15px;
-  
-}
-
-.events h4{
-  font-size: 16px;
-  font-style: normal;
-  font-weight: bold;
-  color: #0A760F;
-  width: 170px;
-  width: 100%;
-  padding-left: 680px;
-}
-
-.events h4:hover{
-  text-decoration: underline;
-  cursor: pointer;
-}
-
-.reviews{
-  width: 100%;
-  align-items: center;
-  justify-content: center;
-  border-radius: 15px;
-  border-width: 40%;
-  padding-left: 25px;
-  padding-right: 20px;
-  margin: 10px;
-  margin-bottom: 100px;
-}
-
-.reviews h2{
-  padding-left: 20px;
-}
-
-.reviews h4{
-  font-size: 16px;
-  font-style: normal;
-  font-weight: bold;
-  color: #0A760F;
-  width: 100%;
-  padding-left: 450px;
-}
-
-.reviews h4:hover{
-  text-decoration: underline;
-  cursor: pointer;
-}
-
-#reviewscore1{
-  border-radius: 15px;
-  border-width: 40%;
-  display: flex;
-  gap: 70%;
-  margin-bottom: 10px;
-}
-
-#reviewscore2{
-  border-radius: 15px;
-  border-width: 40%;
-  display: flex;
-  gap: 70%;
-  margin-bottom: 10px;
-}
-
-.reviewbox1{
-  width: 40%;
-  align-items: center;
-  border-radius: 15px;
-  border: 1px solid #0D9813;
-  border-width: 40%;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin: 10px;
 }
