--- a/src/components/base/base.css
+++ b/src/components/base/base.css
@@ -80,6 +80,7 @@
 /* Footer styles */
 .footer {
     /* Layout */
+    position: fixed;
     display: flex;
     flex-direction: column;
     justify-content: center;
